<resources>
    <string name="title_fragment_new_service">Новая услуга</string>
    <string name="title_fragment_edit_service">Редактирование услуги</string>
    <string name="str_service_name">Название услуги</string>
    <string name="str_service_duration">Продолжительность услуги</string>
    <string name="str_service_description">Подробное описание услуги</string>
    <string name="str_service_price">Цена услуги</string>
    <string name="str_currency">руб.</string>
    <string name="err_fill_required_before_save">Перед сохранением необходимо заполнить название, продолжительность и цену услуги!</string>
</resources>
