<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dialog_fragment_margin"
        tools:context=".ui.ServiceFragment">

    <!--    <ImageView-->
    <!--            android:id="@+id/image"-->
    <!--            android:layout_width="100dp"-->
    <!--            android:layout_height="100dp"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            android:src="@drawable/new_service"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            tools:ignore="ContentDescription" />-->

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_name_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/service_duration_wrap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_service_name"
                android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_duration_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_name_wrap">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/str_service_duration"
                android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_price_wrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_duration_wrap">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_price"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/str_service_price"
                android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="bottom"
            android:text="@string/str_currency"
            app:layout_constraintBottom_toBottomOf="@+id/service_price_wrap"
            app:layout_constraintStart_toEndOf="@+id/service_price_wrap"
            app:layout_constraintTop_toTopOf="@+id/service_price_wrap" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_description_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/str_service_description"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_price_wrap">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_description"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/service_descriptions"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--            android:layout_marginStart="@dimen/activity_vertical_margin"-->
    <!--            app:layout_constraintBottom_toBottomOf="@+id/image"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/service_name_wrap" />-->

</androidx.constraintlayout.widget.ConstraintLayout>